--- a/notebook/example2.ipynb
+++ b/notebook/example2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'default+of+credit+card+clients.zip'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\github\\\\Credit Card Default Machine Learning\\\\Credit-Card-Default-Prediction\\\\notebook'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "('d:\\\\github\\\\Credit Card Default Machine Learning\\\\Credit-Card-Default-Prediction\\\\file.zip',\n",
-       " <http.client.HTTPMessage at 0x14a077836d0>)"
+       " <http.client.HTTPMessage at 0x2d2f498cb50>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "'.zip'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,32 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ID', 'LIMIT_BAL', 'SEX', 'EDUCATION', 'MARRIAGE', 'AGE', 'PAY_0',\n",
-       "       'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6', 'BILL_AMT1', 'BILL_AMT2',\n",
-       "       'BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1',\n",
-       "       'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6',\n",
-       "       'default payment next month'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,22 +157,506 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# preparing data schema\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_type = list(map(lambda x: str(x).replace(\"dtype('\" , \"\").replace(\"')\", \"\").replace(\"\\n\", \"\") , df.dtypes.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = dict(zip(df.columns , data_type))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6000, 25)"
+       "{'ID': 'int64',\n",
+       " 'LIMIT_BAL': 'int64',\n",
+       " 'SEX': 'int64',\n",
+       " 'EDUCATION': 'int64',\n",
+       " 'MARRIAGE': 'int64',\n",
+       " 'AGE': 'int64',\n",
+       " 'PAY_0': 'int64',\n",
+       " 'PAY_2': 'int64',\n",
+       " 'PAY_3': 'int64',\n",
+       " 'PAY_4': 'int64',\n",
+       " 'PAY_5': 'int64',\n",
+       " 'PAY_6': 'int64',\n",
+       " 'BILL_AMT1': 'int64',\n",
+       " 'BILL_AMT2': 'int64',\n",
+       " 'BILL_AMT3': 'int64',\n",
+       " 'BILL_AMT4': 'int64',\n",
+       " 'BILL_AMT5': 'int64',\n",
+       " 'BILL_AMT6': 'int64',\n",
+       " 'PAY_AMT1': 'int64',\n",
+       " 'PAY_AMT2': 'int64',\n",
+       " 'PAY_AMT3': 'int64',\n",
+       " 'PAY_AMT4': 'int64',\n",
+       " 'PAY_AMT5': 'int64',\n",
+       " 'PAY_AMT6': 'int64',\n",
+       " 'default payment next month': 'int64'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default payment next month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>689</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3272</td>\n",
+       "      <td>3455</td>\n",
+       "      <td>3261</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14331</td>\n",
+       "      <td>14948</td>\n",
+       "      <td>15549</td>\n",
+       "      <td>1518</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28314</td>\n",
+       "      <td>28959</td>\n",
+       "      <td>29547</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>1069</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20940</td>\n",
+       "      <td>19146</td>\n",
+       "      <td>19131</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>36681</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>9000</td>\n",
+       "      <td>689</td>\n",
+       "      <td>679</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  PAY_4  \\\n",
+       "0   1      20000    2          2         1   24      2      2     -1     -1   \n",
+       "1   2     120000    2          2         2   26     -1      2      0      0   \n",
+       "2   3      90000    2          2         2   34      0      0      0      0   \n",
+       "3   4      50000    2          2         1   37      0      0      0      0   \n",
+       "4   5      50000    1          2         1   57     -1      0     -1      0   \n",
+       "\n",
+       "   ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  PAY_AMT3  \\\n",
+       "0  ...          0          0          0         0       689         0   \n",
+       "1  ...       3272       3455       3261         0      1000      1000   \n",
+       "2  ...      14331      14948      15549      1518      1500      1000   \n",
+       "3  ...      28314      28959      29547      2000      2019      1200   \n",
+       "4  ...      20940      19146      19131      2000     36681     10000   \n",
+       "\n",
+       "   PAY_AMT4  PAY_AMT5  PAY_AMT6  default payment next month  \n",
+       "0         0         0         0                           1  \n",
+       "1      1000         0      2000                           1  \n",
+       "2      1000      1000      5000                           0  \n",
+       "3      1100      1069      1000                           0  \n",
+       "4      9000       689       679                           0  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from evidently.report import Report\n",
+    "from evidently.metric_preset import DataDriftPreset, TargetDriftPreset, DataQualityPreset\n",
+    "\n",
+    "drift_report = Report(metrics=[DataDriftPreset(), TargetDriftPreset()])\n",
+    "\n",
+    "drift_report.run(reference_data=df, current_data=df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drift_report.save_html(\"report.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path1 = r\"d:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\notebook\\test.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "report = json.loads(drift_report.json())\n",
+    "with open(file_path1 , 'w') as report_file:\n",
+    "    json.dump(report, report_file , indent=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path2 = 'D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\config\\schema.yaml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.util import read_yaml_file\n",
+    "schema_config = read_yaml_file(file_path2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ID': 'int64',\n",
+       " 'LIMIT_BAL': 'int64',\n",
+       " 'SEX': 'int64',\n",
+       " 'EDUCATION': 'int64',\n",
+       " 'MARRIAGE': 'int64',\n",
+       " 'AGE': 'int64',\n",
+       " 'PAY_0': 'int64',\n",
+       " 'PAY_2': 'int64',\n",
+       " 'PAY_3': 'int64',\n",
+       " 'PAY_4': 'int64',\n",
+       " 'PAY_5': 'int64',\n",
+       " 'PAY_6': 'int64',\n",
+       " 'BILL_AMT1': 'int64',\n",
+       " 'BILL_AMT2': 'int64',\n",
+       " 'BILL_AMT3': 'int64',\n",
+       " 'BILL_AMT4': 'int64',\n",
+       " 'BILL_AMT5': 'int64',\n",
+       " 'BILL_AMT6': 'int64',\n",
+       " 'PAY_AMT1': 'int64',\n",
+       " 'PAY_AMT2': 'int64',\n",
+       " 'PAY_AMT3': 'int64',\n",
+       " 'PAY_AMT4': 'int64',\n",
+       " 'PAY_AMT5': 'int64',\n",
+       " 'PAY_AMT6': 'int64',\n",
+       " 'default payment next month': 'int64'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schema_config['columns']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test = list(map(lambda x: str(x).replace(\"dtype('\" , \"\").replace(\"')\", \"\").replace(\"\\n\", \"\") , df.dtypes.values))\n",
+    "data_test = dict(zip(df.columns , data_test))\n",
+    "data_test == schema_config['columns']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "f = open(r\"d:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_validation\\2023-06-25-21-43-15\\report.json\", 'r')\n",
+    "drift_report_json_data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(drift_report_json_data['metrics'][0]['result']['dataset_drift'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = r\"d:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\file.zip\"\n",
+    "with zipfile.ZipFile(file_path , 'r') as zip_file:\n",
+    "        zip_file.extractall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path12 = r\"d:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\notebook\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'default of credit card clients.xls'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(file_path12)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path_123 = r\"D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_ingestion\\2023-06-25-23-09-15\\raw_data\\default of credit card clients.xls\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remains = (\"\\\\\").join(file_path_123.split(\"\\\\\")[-2:])\n",
+    "paths = (\"\\\\\").join(file_path_123.split(\"\\\\\")[:-3])\n",
+    "old_date = str(os.listdir(paths)[-5])\n",
+    "old_file_path = os.path.join(paths,new_date, remains)"
+   ]
   },
   {
    "cell_type": "code",
