--- a/notebook/bug.ipynb
+++ b/notebook/bug.ipynb
@@ -19,49 +19,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_f_path  = r\"D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_ingestion\\2023-07-15-15-08-24\\ingested_data\\train\\default of credit card clients.csv\"\n",
-    "test_f_path = r\"D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_ingestion\\2023-07-15-15-08-24\\ingested_data\\test\\default of credit card clients.csv\""
+    "train_f_path  = r\"D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_ingestion\\2023-07-16-14-48-47\\ingested_data\\train\\default of credit card clients.csv\"\n",
+    "# test_f_path = r\"D:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\src\\artifact\\data_ingestion\\2023-07-15-15-08-24\\ingested_data\\test\\default of credit card clients.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "train_df = pd.read_csv(train_f_path)\n",
-    "test_df = pd.read_csv(test_f_path)"
+    "train_df = pd.read_csv(train_f_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m drift_report \u001b[39m=\u001b[39m Report(metrics\u001b[39m=\u001b[39m[DataDriftPreset(), TargetDriftPreset()])\n\u001b[0;32m      2\u001b[0m drift_report\u001b[39m.\u001b[39mrun(reference_data\u001b[39m=\u001b[39mtrain_df, current_data\u001b[39m=\u001b[39mtest_df)\n\u001b[0;32m      3\u001b[0m drift_report\u001b[39m.\u001b[39msave_html(\u001b[39m\"\u001b[39m\u001b[39mreport12.html\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Report' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[  4103, 240000,      2,      1,      2,     36,     -1,     -1,\n",
+       "             2,      0,     -1,      2,   5367,   6959,   6649,   5149,\n",
+       "         13750,   5777,   6959,     15,      0,   7013,      0,    726,\n",
+       "             1],\n",
+       "       [ 26151,  50000,      2,      2,      1,     34,      3,      3,\n",
+       "             2,      2,      2,      2,  47904,  48240,  48602,  46289,\n",
+       "         44837,  44535,   2000,   2001,    499,   2000,   2000,   1500,\n",
+       "             1],\n",
+       "       [  4145, 200000,      2,      1,      2,     42,     -1,     -1,\n",
+       "             2,     -1,     -1,     -1,    660,   1320,    660,   1320,\n",
+       "          1320,   1710,   1320,      0,   1320,   1320,   1710,  27077,\n",
+       "             1],\n",
+       "       [   174,  50000,      2,      1,      2,     24,      1,     -2,\n",
+       "            -2,     -2,     -2,     -2,   -709,   -709,   -709,  -2898,\n",
+       "         -3272,  -3272,      0,      0,      0,      0,      0,      0,\n",
+       "             1],\n",
+       "       [ 28605,  30000,      2,      3,      1,     45,      2,     -1,\n",
+       "            -1,      2,      0,      0,  15667,  12110,  14904,  14340,\n",
+       "         15131,  16909,  12110,   3000,      0,   1000,   2000,      0,\n",
+       "             1],\n",
+       "       [  5201,  60000,      2,      1,      2,     34,      0,      0,\n",
+       "             0,      0,      0,      0,  55447,  48270,  41087,  25518,\n",
+       "         26276,  27012,   2178,   1511,   1200,   1300,   1300,   1252,\n",
+       "             1],\n",
+       "       [ 23642, 180000,      2,      1,      2,     35,      1,     -2,\n",
+       "            -2,     -2,     -2,     -2,    -18,    -18,    -18,    -18,\n",
+       "           -18,    -18,      0,      0,      0,      0,      0,      0,\n",
+       "             1],\n",
+       "       [ 26628,  60000,      1,      2,      2,     24,      2,      0,\n",
+       "             0,      0,      0,      0,  27019,  25100,  21023,  16973,\n",
+       "         12410,  11944,   1686,   2000,   1000,   1000,   6000,   5000,\n",
+       "             1],\n",
+       "       [ 26534, 450000,      2,      3,      1,     56,      1,     -1,\n",
+       "            -1,     -1,     -1,     -1,     -4,    831,     -3,    646,\n",
+       "            -2,    418,    835,      0,    649,      0,    420,   1204,\n",
+       "             1],\n",
+       "       [  9999,  80000,      2,      2,      2,     26,     -1,      2,\n",
+       "             2,     -2,     -2,     -2,    780,    780,      0,      0,\n",
+       "             0,      0,      0,      0,      0,      0,      0,      0,\n",
+       "             1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "drift_report = Report(metrics=[DataDriftPreset(), TargetDriftPreset()])\n",
-    "drift_report.run(reference_data=train_df, current_data=test_df)\n",
-    "drift_report.save_html(\"report12.html\")\n",
-    "    "
+    "train_df[train_df['default payment next month']==1][1:11].values"
    ]
   },
   {
@@ -95,28 +127,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 6908, 50000,     1,     2,     2,    46,    -1,    -1,    -1,\n",
-       "           -1,     0,     0,  1540, 26060,     0,  2650,  3320,  2764,\n",
-       "        26060,     0,  3472,  2320,  1764,  2841,     0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df[:1].values"
-   ]
   },
   {
    "cell_type": "code",
