--- a/src/cc_default_ml_nitin7478/notebook/test1.ipynb
+++ b/src/cc_default_ml_nitin7478/notebook/test1.ipynb
@@ -2,22 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'd:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\venv\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p d:\\github\\Credit Card Default Machine Learning\\Credit-Card-Default-Prediction\\venv ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
      ]
     }
    ],
    "source": [
     "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "model= r'D:\\\\github\\\\Credit Card Default Machine Learning\\\\Credit-Card-Default-Prediction\\\\src\\\\cc_default_ml_nitin7478\\\\src\\\\artifact\\\\model_trainer\\\\2023-07-19-12-17-41\\\\trained_model\\\\model.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m base_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mabspath(model)))  \u001b[39m# Get the base directory of the src folder\u001b[39;00m\n\u001b[0;32m      2\u001b[0m eval_file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mfolder\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mevaluation_file.yaml\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "base_path = os.path.dirname(os.path.dirname(os.path.abspath(model)))  # Get the base directory of the src folder\n",
+    "eval_file_path = os.path.join(base_path, 'folder', 'evaluation_file.yaml')"
    ]
   },
   {
@@ -35,7 +64,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   },
   "orig_nbformat": 4
